first practice commit

--- a/TimeTable.htm
+++ b/TimeTable.htm
@@ -27,6 +27,7 @@
 <body>
     <h1 style="color:rgb(2, 2, 2)">
         <center>Time Table</center>
+        <p>this is just for practice</p>
     </h1>
     <table border="2" cellspacing="4" Cellpadding="2" align="center">
         <tr>
